Refactored the make file to only create objects

--- a/printf/Makefile
+++ b/printf/Makefile
@@ -1,26 +1,16 @@
 CC = cc
 FLAGS = -Wall -Wextra -Werror
-FILES = ft_calloc.c ft_itoa.c ft_memset.c ft_printf.c ft_strlen.c ft_uitoa.c printf_handlers.c printf_handlers_utils.c
-OBJ = $(FILES:.c=.o)
-NAME = libftprintf.a
+CFILES = ft_printf.c printf_handlers.c printf_handlers_utils.c
+OBJ = $(addprefix ../obj/, $(CFILES:.c=.o))
 
-all: $(NAME)
+all: $(OBJ)
 
-$(NAME): $(OBJ)
-	ar rcs $@ $^
-
-%.o: %.c
+../obj/%.o: %.c
 	$(CC) $(FLAGS) -c $< -o $@
 
 clean:
 	rm -rf $(OBJ)
 
-fclean: clean
-	rm -f $(NAME)
-
 re:	fclean all
 
-main: all
-	$(CC) main.c $(NAME) -o main
-
-.PHONY: all clean fclean re
+.PHONY: all clean re
