Refactored the make file to only create objects

--- a/get_next_line/Makefile
+++ b/get_next_line/Makefile
@@ -1,7 +1,7 @@
 FILES=get_next_line.c get_next_line_utils.c
 OBJ=$(addprefix ../obj/, $(FILES:.c=.o))
 FLAGS = -Wall -Wextra -Werror
-CC = gcc
+CC = cc
 
 all: $(OBJ)
 
@@ -9,15 +9,6 @@ all: $(OBJ)
 	$(CC) $(FLAGS) -c $< -o $@
 	
 clean:
-	rm -f $(OBJ) $(BONUS_OBJ) main mainb
-
-fclean: clean
-	rm -f $(NAME) bonus
+	rm -f $(OBJ)
 
 re: fclean all
-
-mainb: bonus
-	$(CC) $(FLAGS) mainb.c $^ -o mainb
-
-main: $(NAME)
-	$(CC) $(FLAGS) main.c $^ -o main
